Update package name to include 'laravel' for clarity

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jabsa/package-maker",
+    "name": "jabsa/laravel-package-maker",
     "description": "A Laravel package generator",
     "type": "library",
     "license": "MIT",
